Full-screen dialogs on mobile should use MobileBack.

--- a/src/ui/control/ModalDialog.css
+++ b/src/ui/control/ModalDialog.css
@@ -23,3 +23,9 @@
 .modal-feed {
     --bs-modal-width: var(--feed-width);
 }
+
+@media only screen and (max-width: 991px) {
+    .modal-fullscreen-lg-down .modal-footer {
+        --bs-modal-footer-border-color: transparent;
+    }
+}
