--- a/src/ui/control/TabbedPage.css
+++ b/src/ui/control/TabbedPage.css
@@ -21,7 +21,7 @@
 
 @media only screen and (max-width: 991px) {
     .tabbed-page #back-box {
-        top: 4rem;
+        top: var(--page-header-height);
     }
 
     .tabbed-page #back-box .underlined-tabs {
