--- a/src/ui/explore/ExplorePage.css
+++ b/src/ui/explore/ExplorePage.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 991px) {
     .explore-page .feed-top-box {
-        top: 6rem;
+        top: calc(var(--page-header-height) + 3.5rem);
     }
 }
 
