--- a/src/ui/search/SearchFeed.css
+++ b/src/ui/search/SearchFeed.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 991px) {
+    .search-page .feed-top-box {
+        top: calc(var(--page-header-height) + 3.5rem);
+    }
+}
+
 @media only screen and (min-width: 992px) {
     .search-page .feed-top-box {
         top: calc(var(--page-header-height) + 2.3rem);
