Implemented switching accounts on mobile.

--- a/src/ui/mainmenu/connections/Connections.css
+++ b/src/ui/mainmenu/connections/Connections.css
@@ -78,8 +78,6 @@
 }
 
 #connections .connection-add {
-    margin-top: .5rem;
-    border-top: 1px solid var(--bs-gray-200);
     padding: .75rem 1rem .25rem;
     color: var(--secondary-800);
     cursor: pointer;
@@ -88,6 +86,11 @@
     line-height: 150%;
     display: flex;
     gap: .5rem;
+}
+
+#connections .connection-item + .connection-add {
+    margin-top: .5rem;
+    border-top: 1px solid var(--bs-gray-200);
 }
 
 #connections .connection-add:hover {
