Need margin to give place for the outline of the input. It is visible when the input is focused.

--- a/src/ui/search/SearchPage.css
+++ b/src/ui/search/SearchPage.css
@@ -7,13 +7,17 @@
         padding-bottom: 2rem;
     }
 
+    .search-page #search-box {
+        margin: .25rem;
+    }
+
     .search-page #search-box INPUT {
         width: calc(100% - 1rem);
-        height: 2.75rem;
+        height: 2.5rem;
     }
 
     .search-page #search-box .search-icon {
-        top: .7rem;
+        top: .6rem;
     }
 
     .search-page #search-box .cancel {
