--- a/src/ui/explore/ActivePeoplePage.css
+++ b/src/ui/explore/ActivePeoplePage.css
@@ -8,7 +8,7 @@
 
 @media only screen and (max-width: 991px) {
     .active-people-page {
-        padding-bottom: 3rem;
+        padding-bottom: calc(var(--page-footer-height) + .25rem);
         background-color: white;
         min-height: 100vh;
     }
