--- a/src/ui/comment/compose/CommentCompose.css
+++ b/src/ui/comment/compose/CommentCompose.css
@@ -4,7 +4,7 @@
 
 @media only screen and (max-width: 991px) {
     #comment-compose {
-        margin-bottom: 3rem;
+        margin-bottom: calc(var(--page-footer-height) + .25rem);
     }
 }
 
