--- a/src/ui/grant/GrantPage.css
+++ b/src/ui/grant/GrantPage.css
@@ -4,7 +4,7 @@
 
 @media only screen and (max-width: 991px) {
     .grant-page {
-        padding-bottom: 3rem;
+        padding-bottom: calc(var(--page-footer-height) + .25rem);
         background-color: white;
         min-height: 100vh;
     }
