--- a/src/ui/page/GooglePlayProhibitedPage.css
+++ b/src/ui/page/GooglePlayProhibitedPage.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 991px) {
     .google-play-prohibited-page {
-        padding-bottom: 3rem;
+        padding-bottom: calc(var(--page-footer-height) + .25rem);
         background-color: white;
         min-height: 100vh;
     }
