--- a/src/ui/people/PeopleContent.css
+++ b/src/ui/people/PeopleContent.css
@@ -10,6 +10,6 @@
 @media only screen and (max-width: 991px) {
     .people-content {
         border-radius: 0;
-        padding-bottom: 3rem;
+        padding-bottom: calc(var(--page-footer-height) + .25rem);
     }
 }
