--- a/src/ui/mainmenu/BottomMenu.css
+++ b/src/ui/mainmenu/BottomMenu.css
@@ -77,3 +77,18 @@
     top: -1.5rem;
     cursor: pointer;
 }
+
+#bottom-menu.compact {
+    height: 3rem;
+}
+
+#bottom-menu.compact .item .title {
+    display: none;
+}
+
+#bottom-menu.compact .new-post {
+    width: 2rem;
+    height: 2rem;
+    border-radius: .5rem;
+    top: -.1rem;
+}
