--- a/src/ui/control/Button.css
+++ b/src/ui/control/Button.css
@@ -7,11 +7,11 @@
     --bs-btn-bg: var(--bs-gray-100);
     --bs-btn-border-color: var(--bs-gray-100);
     --bs-btn-hover-color: var(--bs-gray-900);
-    --bs-btn-hover-bg: var(--highlight);
-    --bs-btn-hover-border-color: var(--highlight);
+    --bs-btn-hover-bg: var(--bs-gray-200);
+    --bs-btn-hover-border-color: var(--bs-gray-300);
     --bs-btn-active-color: var(--bs-gray-900);
-    --bs-btn-active-bg: var(--highlight);
-    --bs-btn-active-border-color: var(--primary-600);
+    --bs-btn-active-bg: var(--bs-gray-100);
+    --bs-btn-active-border-color: var(--bs-primary);
     --bs-btn-disabled-color: var(--bs-gray-400);
     --bs-btn-disabled-bg: var(--bs-gray-100);
     --bs-btn-disabled-border-color: var(--bs-gray-100);
@@ -22,11 +22,11 @@
     --bs-btn-bg: var(--bs-gray-100);
     --bs-btn-border-color: var(--bs-gray-100);
     --bs-btn-hover-color: var(--bs-gray-900);
-    --bs-btn-hover-bg: var(--highlight);
-    --bs-btn-hover-border-color: var(--highlight);
+    --bs-btn-hover-bg: var(--bs-gray-200);
+    --bs-btn-hover-border-color: var(--bs-gray-300);
     --bs-btn-active-color: var(--bs-gray-900);
-    --bs-btn-active-bg: var(--highlight);
-    --bs-btn-active-border-color: var(--primary-600);
+    --bs-btn-active-bg: var(--bs-gray-100);
+    --bs-btn-active-border-color: var(--bs-primary);
     --bs-btn-disabled-color: var(--bs-gray-400);
     --bs-btn-disabled-bg: var(--bs-gray-100);
     --bs-btn-disabled-border-color: var(--bs-gray-100);
@@ -40,8 +40,8 @@
     --bs-btn-bg: transparent;
     --bs-btn-border-color: transparent;
     --bs-btn-hover-color: var(--bs-gray-900);
-    --bs-btn-hover-bg: var(--highlight);
-    --bs-btn-hover-border-color: var(--highlight);
+    --bs-btn-hover-bg: var(--bs-gray-100);
+    --bs-btn-hover-border-color: var(--bs-gray-100);
     --bs-btn-active-color: var(--bs-gray-700);
     --bs-btn-active-bg: transparent;
     --bs-btn-active-border-color: var(--bs-gray-700);
@@ -55,8 +55,8 @@
     --bs-btn-bg: transparent;
     --bs-btn-border-color: transparent;
     --bs-btn-hover-color: var(--bs-gray-900);
-    --bs-btn-hover-bg: var(--highlight);
-    --bs-btn-hover-border-color: var(--highlight);
+    --bs-btn-hover-bg: var(--bs-gray-100);
+    --bs-btn-hover-border-color: var(--bs-gray-100);
     --bs-btn-active-color: var(--bs-gray-700);
     --bs-btn-active-bg: transparent;
     --bs-btn-active-border-color: var(--bs-gray-700);
