--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -88,7 +88,7 @@
 
 .node-card .counter TIME {
     text-decoration: underline dotted;
-    color: var(--primary-800);
+    color: var(--bs-brand-600);
 }
 
 .node-card .buttons {
