--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -5,10 +5,30 @@
 // scss-docs-start import-stack
 // Configuration
 @import "~bootstrap/scss/functions";
+
+$brand: #0fb6bf;
+
+$brand-100: tint-color($brand, 80%) !default;
+$brand-200: tint-color($brand, 60%) !default;
+$brand-300: tint-color($brand, 40%) !default;
+$brand-400: tint-color($brand, 20%) !default;
+$brand-500: $brand !default;
+$brand-600: shade-color($brand, 20%) !default;
+$brand-700: shade-color($brand, 40%) !default;
+$brand-800: shade-color($brand, 60%) !default;
+$brand-900: shade-color($brand, 80%) !default;
+
+$primary: $brand;
+$link-color: rgb(13, 110, 253); // $blue-500
+
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/variables-dark";
 
 $enable-negative-margins:     true;
+
+$colors: map-merge($colors, (
+  "brand": $brand
+));
 
 $nav-tabs-link-active-color:  $gray-800;
 $nav-link-color:              $gray-600;
@@ -29,6 +49,18 @@ $offcanvas-border-color:      white;
 // Layout & components
 @import "~bootstrap/scss/root";
 
+$brands: (
+  "100": $brand-100,
+  "200": $brand-200,
+  "300": $brand-300,
+  "400": $brand-400,
+  "500": $brand-500,
+  "600": $brand-600,
+  "700": $brand-700,
+  "800": $brand-800,
+  "900": $brand-900
+);
+
 $blues: (
   "100": $blue-100,
   "200": $blue-200,
@@ -42,11 +74,15 @@ $blues: (
 );
 
 :root {
+  @each $color, $value in $brands {
+    --#{$prefix}brand-#{$color}: #{$value};
+  }
+
   @each $color, $value in $blues {
     --#{$prefix}blue-#{$color}: #{$value};
   }
 
-  --#{$prefix}cyan-200: #{$cyan-200};
+  --#{$prefix}green-400: #{$green-400};
 
   --#{$prefix}input-focus-border-color: #{$input-focus-border-color};
   --#{$prefix}input-focus-box-shadow: #{$input-focus-box-shadow};
@@ -60,6 +96,14 @@ $blues: (
 @import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
+
+.btn-primary {
+  --#{$prefix}btn-color: white;
+  --#{$prefix}btn-hover-color: white;
+  --#{$prefix}btn-active-color: white;
+  --#{$prefix}btn-disabled-color: #{$gray-100};
+}
+
 @import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/dropdown";
 @import "~bootstrap/scss/button-group";
