--- a/src/ui/comment/CommentsLoadAllButton.css
+++ b/src/ui/comment/CommentsLoadAllButton.css
@@ -7,6 +7,6 @@
 }
 
 .comments-load-all:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
     color: black;
 }
