--- a/src/ui/comment/CommentsRewindButton.css
+++ b/src/ui/comment/CommentsRewindButton.css
@@ -8,6 +8,6 @@
 }
 
 .comments-rewind:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
     color: black;
 }
