--- a/src/ui/comment/RepliedTo.css
+++ b/src/ui/comment/RepliedTo.css
@@ -46,7 +46,7 @@
 }
 
 .replied-to .unset:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
 }
 
 .glance-comment-popover {
