--- a/src/ui/compose/drafts/ComposeDraftItem.css
+++ b/src/ui/compose/drafts/ComposeDraftItem.css
@@ -13,7 +13,7 @@
 }
 
 .draft-selector .dropdown-item.current {
-    background-color: var(--primary-50);
+    background-color: var(--brand-50);
     cursor: default;
 }
 
