--- a/src/ui/control/PrincipalSelect.css
+++ b/src/ui/control/PrincipalSelect.css
@@ -22,7 +22,7 @@
 }
 
 .principal-select .btn:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
 }
 
 .principal-select .btn:disabled, .principal-select .btn:disabled:hover {
