--- a/src/ui/control/dropdownmenu/MenuButton.css
+++ b/src/ui/control/dropdownmenu/MenuButton.css
@@ -17,7 +17,7 @@
 }
 
 .menu-button:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
     transition: background-color, color .15s ease-in;
 }
 
