--- a/src/ui/people/PeoplePerson.css
+++ b/src/ui/people/PeoplePerson.css
@@ -3,7 +3,7 @@
 }
 
 .people-page .person:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
 }
 
 .people-page .person .avatar-selector {
