--- a/src/ui/posting/PostingSources.css
+++ b/src/ui/posting/PostingSources.css
@@ -10,7 +10,7 @@
 }
 
 .posting-sources .source:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
 }
 
 .posting-sources .source A {
