--- a/src/ui/search/SearchTabs.css
+++ b/src/ui/search/SearchTabs.css
@@ -11,7 +11,7 @@
 }
 
 .search-tabs .filter:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
     transition: background-color .15s ease-in-out;
 }
 
