--- a/src/ui/settings/SettingsItemTokens.css
+++ b/src/ui/settings/SettingsItemTokens.css
@@ -3,7 +3,7 @@
 }
 
 .token-info:hover {
-    background-color: var(--highlight-light);
+    background-color: var(--bs-gray-100);
 }
 
 .token-info .icon {
@@ -21,7 +21,7 @@
 }
 
 .token-info .current {
-    color: var(--bs-success);
+    color: var(--bs-brand-600);
     font-style: italic;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .token-info .token-button:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
     color: var(--bs-gray-800);
 }
 
