--- a/src/ui/settings/profile/avatar/AvatarSelector.css
+++ b/src/ui/settings/profile/avatar/AvatarSelector.css
@@ -30,7 +30,7 @@
 }
 
 .avatar-selector .item:hover {
-    background-color: var(--highlight);
+    background-color: var(--bs-gray-100);
 }
 
 .avatar-selector .item.active, .avatar-selector .item.active:hover {
