--- a/src/ui/posting/PostingSources.css
+++ b/src/ui/posting/PostingSources.css
@@ -1,28 +1,43 @@
+.posting-sources {
+    font-size: 1rem;
+}
+
 .posting-sources .title {
+    font-size: 1.1rem;
     font-weight: 600;
     color: var(--bs-gray-800);
-    margin-bottom: .3em;
+    margin-bottom: .5em;
 }
 
 .posting-sources .source {
-    padding: .3em 1em .3em .2em;
-    color: var(--bs-primary);
+    display: block;
+    padding: .3em 1em .3em .5em;
+    margin-left: -.5em;
+    margin-right: -.5em;
+    border-radius: .5em;
+    color: var(--bs-gray-600);
 }
 
 .posting-sources .source:hover {
+    color: var(--bs-gray-900);
     background-color: var(--bs-gray-100);
-}
-
-.posting-sources .source A {
-    color: inherit;
+    text-decoration: none;
 }
 
 .posting-sources .source .icon {
     display: inline-block;
     width: 1.7em;
-    color: var(--bs-gray-600);
+    vertical-align: .1em;
 }
 
 .posting-sources .source .icon.original {
-    color: var(--bs-green);
+    color: var(--bs-primary);
+}
+
+.posting-sources .source .node-name {
+    font-weight: 400;
+}
+
+.posting-sources .source .node-name:hover {
+    text-decoration: none;
 }
