--- a/src/ui/donatedialog/DonateDialog.css
+++ b/src/ui/donatedialog/DonateDialog.css
@@ -22,6 +22,10 @@
     flex: 1 0 10em;
 }
 
+.donate-dialog .fundraisers .nav .nav-link svg {
+    vertical-align: -.25em;
+}
+
 .donate-dialog .fundraisers .info {
     flex: 4 1 calc(256px + 2rem);
     min-height: calc(256px + 4rem);
