--bs-cyan-200 is not set already.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -16,7 +16,7 @@
      * --bs-blue-200: #9ec5fe;
      * --bs-blue-100: #cfe2ff;
      *
-     * --bs-cyan-200: #9eeaf9;
+     * --bs-green-400: #479f76;
      */
 
     /* Design colors */
