--- a/src/ui/entry/EntryGallery.css
+++ b/src/ui/entry/EntryGallery.css
@@ -139,15 +139,17 @@
 
 @media only screen and (max-width: 991px) {
     .entry .gallery .gallery-expand {
-        opacity: .5;
+        opacity: .75;
         font-size: 1em;
     }
 }
 
-.entry .gallery:hover .gallery-expand {
-    opacity: .5;
-}
+@media only screen and (min-width: 992px) {
+    .entry .gallery:hover .gallery-expand {
+        opacity: .75;
+    }
 
-.entry .gallery:hover .gallery-expand:hover {
-    opacity: 1;
+    .entry .gallery:hover .gallery-expand:hover {
+        opacity: 1;
+    }
 }
